fix(postgres): correct database volume mount path
Change postgres volume mount path from /var/lib/postgresql/data to /var/lib/postgresql

--- a/lzc-manifest.yml
+++ b/lzc-manifest.yml
@@ -116,7 +116,7 @@ services:
       - POSTGRES_PASSWORD=magical_password
       - POSTGRES_DB=calendso
     binds:
-      - /lzcapp/var/postgres:/var/lib/postgresql/data
+      - /lzcapp/var/postgres:/var/lib/postgresql
     health_check:
       test:
         - CMD-SHELL
